# BabaTree

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: guardrails.py  orchestrator.py
agents/prayer_validator/: agent.py  prompts.py  tools.py
agents/tree_growth/: agent.py  prompts.py  tools.py
app/: main.py
app/components/: prayer_table.py  tree_visual.py
app/screens/: dashboard.py  login.py
core/: config.py  models.py  prayer_rules.py  tree_stages.py
mcp_server/: aladhan_client.py  aladhan_server.py
