[project]
name = "babatree"
version = "0.1.0"
description = "BabaTree - a gamified prayer-consistency app that grows a virtual tree with every on-time prayer, built with Google ADK agents and an MCP server for prayer times."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.38",
    "google-adk>=2.3.0",
    "mcp>=1.28",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 110

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
